Refactored hamburger title resize to be simplier

--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -115,6 +115,7 @@
 		color: white;
 		text-align: center;
 		vertical-align: middle;
+		// Allows vertical-align: middle to work
 		line-height: v.$navbar-height;
 	}
 }
