Hamburger menu title now has ellipse text-overflow for when fontSize reaches miniumum on resize

--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -117,5 +117,9 @@
 		vertical-align: middle;
 		// Allows vertical-align: middle to work
 		line-height: v.$navbar-height;
+		// maxWidth (which allows ellipse to work) set using JS
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ". . .   ";
 	}
 }
