--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -124,7 +124,7 @@ $item-container-list-sidebar-border-width: 2px;
 //==============
 // Border-radius
 //==============
-$navbar-hamburger-dropdown-border-radius: 5%;
+$navbar-hamburger-border-radius: 10px;
 
 //=========
 // Padding
