--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -14,6 +14,7 @@ $medium-light-gray: #bfbfbf;
 $medium-gray: #919191;
 $dark-gray: #808080;
 $darker-gray: #757575;
+$very-dark-gray: #4e4e4e;
 // Blue grays
 $very-light-blue-gray: #7390af;
 $light-blue-gray: #607c99;
@@ -55,6 +56,7 @@ $status-red: #d14242;
 // Heights
 //==========
 $navbar-height: 56px;
+$hamburger-dropdown-item-height: 42px;
 $edit-account-modal-height: 480px;
 $search-filter-sort-bar-height: 46px;
 $search-filter-sort-bar-button-height: 28px;
