Clicking a row in a list table now always opens the item. Also stopped text selection in a list table

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -26,6 +26,8 @@
 
 	.list-table__row,
 	.js-calc-list-table__row {
+		@include m.stop-text-selection();
+
 		padding: 5px;
 		height: v.$list-item-table-row-height;
 		text-align: center;
